--- a/static/css/base.css
+++ b/static/css/base.css
@@ -108,7 +108,7 @@ a.category-badge > span.badge:hover {
     position: fixed;
     top: 72px;
     right: 15px;
-    z-index: 99999999999;
+    z-index: 999999;
 }
 
 .custom-toast {
